--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.xcf
 
+#res Link
+src/res
+
 # http://qiita.com/tora470/items/d61c3fcb261e48edc996
 
 # Eclipse
@@ -152,3 +155,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
